--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,43 @@
+
+# BOTS IGNORE
+**/.env
+**/*.d.ts
+**/*.js.map
+
+**/.DS_Store
+
+**/release/
+!**/release/bundle.js
+!**/release/locale
+
+**/*.zip
+
 # NPM/Node
-/node_modules/
-.ntvs_analysis.dat*
-npm-debug*
+**/node_modules/
+**/.ntvs_analysis.dat*
+**/npm-debug*
 
 # Istanbul
 **/coverage/
-coverage# IDE
-/.vscode/
-/.idea/
-!/.vscode/launch.json
-!/.vscode/settings.json
-/.settings
+
+# IDE
+**/.vscode/
+!**/.vscode/launch.json
+!**/.vscode/settings.json
+!**/.vscode/extensions.json
+**/.settings
 
 # Typescript
-/typings
-tsd-debug.log
+**/typings
+**/tsd-debug.log
 
 # Generated Javascript
-/lib/**/*.js*
-/src/**/*.js*
-/test/**/*.js*
-/bin/**/*.js*
-/out/
+**/lib/**/*.js
+**/src/**/*.js
+**/test/**/*.js
+**/bin/**/*.js
+**/out/
 
 **/testresults/
+
+**/*.cmd
