--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,8 +3,7 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
-        {
+    "configurations": [{
             "type": "node",
             "request": "launch",
             "name": "Launch Program - app",
@@ -54,7 +53,7 @@
             "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
             "stopOnEntry": false,
             "args": [
-                "./release/test/*.js",
+                "./release/test/**/*.js",
                 "--no-timeouts"
             ],
             "cwd": "${workspaceRoot}",
