--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "enforce-code-cov": "gulp enforce-code-coverage",
     "gulp": "gulp",
     "lint": "gulp tslint",
+    "jasmine": "NODE_ENV=test jasmine --config=jasmine.json",
     "pack": "rm -f bundle.js && webpack",
     "package": "gulp package-transpiled-javascript",
     "show-cov-ut": "gulp show-unittest-coverage-report",
     "start": "node ./bundle",
-    "test": "gulp run-unit-tests check-security",
+    "test": "npm run jasmine && gulp run-unit-tests check-security",
     "transpile": "gulp transpile",
     "validate": "npm ls",
     "watch": "tsc -w -p tsconfig.json"
@@ -45,13 +46,14 @@
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/lodash": "^4.14.66",
-    "@types/mocha": "^2.2.33",
+    "@types/mocha": "^2.2.43",
     "@types/node": "^6.0.52",
     "@types/request": "0.0.34",
     "@types/restify": "^2.0.35",
     "@types/sinon": "^1.16.33",
     "botbuilder": "^3.8.4",
     "botbuilder-forms": "^1.0.2",
+    "botbuilder-unit": "^0.3.0",
     "chai": "^3.5.0",
     "del": "^2.2.2",
     "dotenv": "^4.0.0",
@@ -68,6 +70,8 @@
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.1.3",
     "istanbul": "^0.4.5",
+    "jasmine": "^2.8.0",
+    "jasmine-terminal-reporter": "^1.0.3",
     "jshint": "^2.9.4",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
