fixed issues with npm scripts not running on windows

--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "lint"
   ],
   "scripts": {
-    "build": "rm -rf ./release && gulp transpile && npm run pack",
-    "build-full": "rm -rf ./release && mkdir ./release && gulp clean transpile && npm run localize && npm run pack",
+    "build": "gulp clean transpile && npm run pack",
+    "build-full": "gulp clean transpile && npm run localize && npm run pack",
     "build-start": "npm run build && npm run start",
     "check-security": "gulp check-security",
     "ci-test": "mocha-typescript-watch -p tsconfig.json ./release/test/",
     "clean": "gulp clean",
-    "console": "nodemon ./release/console",
+    "console": "./node_modules/.bin/nodemon ./release/console",
     "deploy": "npm cache clean",
     "debug": "mocha --inspect-brk ./release/test/",
-    "emulator": "nodemon ./release/server",
+    "emulator": "./node_modules/.bin/nodemon ./release/server",
     "enforce-code-cov": "gulp enforce-code-coverage",
     "gulp": "gulp",
     "lint": "gulp tslint",
-    "jasmine": "NODE_ENV=test jasmine --config=jasmine.json",
-    "pack": "rm -f bundle.js && webpack",
+    "jasmine": "NODE_ENV=test ./node_modules/.bin/jasmine --config=jasmine.json",
+    "pack": "webpack",
     "package": "gulp package-transpiled-javascript",
     "show-cov-ut": "gulp show-unittest-coverage-report",
     "start": "node ./bundle",
