rename emulator cmd to server

--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "console": "./node_modules/.bin/nodemon ./release/console",
     "deploy": "npm cache clean",
     "debug": "mocha --inspect-brk ./release/test/",
-    "emulator": "./node_modules/.bin/nodemon ./release/server",
     "enforce-code-cov": "gulp enforce-code-coverage",
     "gulp": "gulp",
     "lint": "gulp tslint",
     "jasmine": "NODE_ENV=test ./node_modules/.bin/jasmine --config=jasmine.json",
     "pack": "webpack",
     "package": "gulp package-transpiled-javascript",
+    "server": "./node_modules/.bin/nodemon ./release/server",
     "show-cov-ut": "gulp show-unittest-coverage-report",
     "start": "node ./bundle",
     "test": "npm run jasmine && gulp run-unit-tests check-security",
@@ -36,11 +36,13 @@
     "name": "Claudius Mbemba",
     "email": "clmb@microsoft.com"
   },
-  "contributors": [{
-    "url": "",
-    "name": "",
-    "email": ""
-  }],
+  "contributors": [
+    {
+      "url": "",
+      "name": "",
+      "email": ""
+    }
+  ],
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
