--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,39 @@
 {
   "compilerOptions": {
     /* Basic Options */
-    "target": "es6", /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
-    "module": "commonjs", /* Specify module code generation: 'commonjs', 'amd', 'system', 'umd' or 'es2015'. */
+    "target": "es6",
+    /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
+    "module": "commonjs",
+    /* Specify module code generation: 'commonjs', 'amd', 'system', 'umd' or 'es2015'. */
     "lib": [
       "dom",
       "es2015.promise",
       "es6"
-    ], /* Specify library files to be included in the compilation:  */
+    ],
+    /* Specify library files to be included in the compilation:  */
     // "allowJs": true, /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
     // "declaration": true, /* Generates corresponding '.d.ts' file. */
-    "sourceMap": true, /* Generates corresponding '.map' file. */
+    "sourceMap": true,
+    /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
-    "outDir": "./release", /* Redirect output structure to the directory. */
-    "rootDir": "./src", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
-    "removeComments": true, /* Do not emit comments to output. */
+    "outDir": "./release",
+    /* Redirect output structure to the directory. */
+    "outFiles": ["${workspaceRoot}/release/**/*.js"],
+    "rootDir": "./src",
+    /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    "removeComments": true,
+    /* Do not emit comments to output. */
     // "noEmit": true,                        /* Do not emit outputs. */
     // "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
     // "downlevelIteration": true,            /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
     // "isolatedModules": true,               /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
     /* Strict Type-Checking Options */
-    "strict": false, /* Enable all strict type-checking options. */
-    "noImplicitAny": false, /* Raise error on expressions and declarations with an implied 'any' type. */
+    "strict": false,
+    /* Enable all strict type-checking options. */
+    "noImplicitAny": false,
+    /* Raise error on expressions and declarations with an implied 'any' type. */
     // "strictNullChecks": true,              /* Enable strict null checks. */
     // "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
     // "alwaysStrict": true,                  /* Parse in strict mode and emit "use strict" for each source file. */
@@ -39,16 +49,19 @@
     "rootDirs": [
       "./src",
       "./src/test"
-    ], /* List of root folders whose combined content represents the structure of the project at runtime. */
+    ],
+    /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": [
       "./node_modules/@types"
-    ], /* List of folders to include type definitions from. */
+    ],
+    /* List of folders to include type definitions from. */
     "types": [
       "node",
       "mocha",
       "lodash",
       "chai"
-    ], /* Type declaration files to be included in compilation. */
+    ],
+    /* Type declaration files to be included in compilation. */
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     /* Source Map Options */
     // "sourceRoot": "./",                    /* Specify the location where debugger should locate TypeScript files instead of source locations. */
@@ -56,7 +69,8 @@
     // "inlineSourceMap": true,               /* Emit a single file with source maps instead of having a separate file. */
     // "inlineSources": true,                 /* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */
     /* Experimental Options */
-    "experimentalDecorators": true, /* Enables experimental support for ES7 decorators. */
+    "experimentalDecorators": true,
+    /* Enables experimental support for ES7 decorators. */
     "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */
   }
 }
