updated nodemon to add --delay

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "check-security": "gulp check-security",
     "ci-test": "mocha-typescript-watch -p tsconfig.json ./release/test/",
     "clean": "gulp clean",
-    "console": "./node_modules/.bin/nodemon ./release/console",
+    "console": "./node_modules/.bin/nodemon --delay 200ms ./release/console",
     "deploy": "npm cache clean",
     "debug-test": "mocha --inspect-brk ./release/test/",
     "enforce-code-cov": "gulp enforce-code-coverage",
@@ -22,7 +22,7 @@
     "jasmine": "node ./release/specs/runner",
     "pack": "webpack",
     "package": "gulp package-transpiled-javascript",
-    "server": "./node_modules/.bin/nodemon ./release/server",
+    "server": "./node_modules/.bin/nodemon --delay 200ms ./release/server",
     "show-cov-ut": "gulp show-unittest-coverage-report",
     "start": "node ./bundle",
     "show-npm-packages": "npm ls",
