--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "name": "Claudius Mbemba",
     "email": "clmb@microsoft.com"
   },
-  "contributors": [{
-    "url": "",
-    "name": "",
-    "email": ""
-  }],
+  "contributors": [
+    {
+      "url": "",
+      "name": "",
+      "email": ""
+    }
+  ],
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
